--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,11 @@
-<p style="color: green"><%= notice %></p>
+<h1>Showing article details</h1>
 
+<p style="color: green"><%= notice %></p>
 <%= render @article %>
 
 <div>
-  <%= link_to "Edit this article", edit_article_path(@article) %> |
-  <%= link_to "Back to articles", articles_path %>
+  <%= link_to "Edit", edit_article_path(@article) %> |
+  <%= link_to "Back", articles_path %>  
 
-  <%= button_to "Destroy this article", @article, method: :delete %>
+  <%= button_to "Delete this article", @article, method: :delete %>
 </div>
