--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,16 +1,27 @@
 <p style="color: green"><%= notice %></p>
 
+<h1>Articles listing page</h1>
+
 <% content_for :title, "Articles" %>
 
-<h1>Articles</h1>
 
-<div id="articles">
-  <% @articles.each do |article| %>
-    <%= render article %>
-    <p>
-      <%= link_to "Show this article", article %>
-    </p>
-  <% end %>
-</div>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Description</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+    <tbody>
+      <% @articles.each do |article| %>
+      <tr>
+        <td><%= article.title%></td>
+        <td><%= article.description%></td>
+        <td>placeholder</td>
+      </tr>
+      <% end %>
+    </tbody>
+</table>
 
 <%= link_to "New article", new_article_path %>
