--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "New article" %>
 
-<h1>New article</h1>
+<h1>Create a new article</h1>
 
 <%= render "form", article: @article %>
 
