add delete table feature

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,6 +5,7 @@
 
 <div>
   <%= link_to "Edit", edit_article_path(@article) %> |
+  <%= link_to "Delete", article_path(@article), method: :delete %> |
   <%= link_to "Back", articles_path %>  
 
   <%= button_to "Delete this article", @article, method: :delete %>
