--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th>Actions</th>
+      <th colspan='3'>Actions</th>
     </tr>
   </thead>
     <tbody>
@@ -18,10 +18,14 @@
       <tr>
         <td><%= article.title%></td>
         <td><%= article.description%></td>
-        <td>placeholder</td>
+        <td><%= link_to 'Show', article_path(article) %></td>
+        <td><%= link_to 'Edit', edit_article_path(article), method: :patch %></td>
+        <td><%= link_to 'Delete', article_path(article), method: :delete %></td>
       </tr>
       <% end %>
     </tbody>
 </table>
 
-<%= link_to "New article", new_article_path %>
+<p>
+  <%= link_to "Create new article", new_article_path %>
+</p>
