--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,31 +1,34 @@
-<p style="color: green"><%= notice %></p>
+<div id='page-content'>
+  <p style="color: green"><%= notice %></p>
 
-<h1>Articles listing page</h1>
+  <h1 class="text-center mt-4">Articles Listing Page</h1>
 
-<% content_for :title, "Articles" %>
+  <% content_for :title, "Articles" %>
+
+  <div class='container'>
+    <% @articles.each do |article| %>
+      <div class="row justify-content-md-center">
+        <div class="col-8 mt-4">
+          <div class="card text-center shadow mb-5 bg-body-tertiary rounded">
+            <div class="card-header fst-italic">
+              by Rita Huang
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"><%= link_to article.title, article_path(article), class: 'text-success' %></h5>
+              <p class="card-text"><%= truncate(article.description, length: 100) %></p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            <div class="card-footer text-body-secondary">
+              2 days ago
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
 
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan='3'>Actions</th>
-    </tr>
-  </thead>
-    <tbody>
-      <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title%></td>
-        <td><%= article.description%></td>
-        <td><%= link_to 'Show', article_path(article) %></td>
-        <td><%= link_to 'Edit', edit_article_path(article), method: :patch %></td>
-        <td><%= link_to 'Delete', article_path(article), method: :delete %></td>
-      </tr>
-      <% end %>
-    </tbody>
-</table>
-
-<p>
-  <%= link_to "Create new article", new_article_path %>
-</p>
+  <p>
+    <%= link_to "Create new article", new_article_path %>
+  </p>
+</div>
