disable field_with_errors

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,11 +1,8 @@
 <% content_for :title, "New article" %>
+<div id='page-content'>
+  <p style="color: green"><%= notice %></p>
 
-<h1>Create a new article</h1>
+  <h1 class="text-center mt-4">Create a new article</h1>
 
-<%= render "form", article: @article %>
-
-<br>
-
-<div>
-  <%= link_to "Back to articles", articles_path %>
+  <%= render "form", article: @article %>
 </div>
