--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,27 +1,38 @@
-<%= form_with(model: article) do |form| %>
-  <% if article.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <%= form_with(model: article, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |form| %>
+        <% if article.errors.any? %>
+          <div style="color: red">
+            <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
 
-      <ul>
-        <% article.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+            <ul>
+              <% article.errors.each do |error| %>
+                <li><%= error.full_message %></li>
+              <% end %>
+            </ul>
+          </div>
         <% end %>
-      </ul>
+
+        <div class="form-group row">
+          <%= form.label :title, class: "col-2 col-form-lable text-light" %>
+          <div class="col-10">
+            <%= form.text_field :title, class: "form-contol shadow mb-3 rounded", placeholder: "Title of Article" %>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <%= form.label :description, class: "col-2 col-form-lable text-light" %>
+          <div class="col-10">
+            <%= form.textarea :description, rows: 10, class: "form-control shadow mb-3 rounded", placeholder: "Description of Article" %>
+          </div>
+        </div>
+
+        <div class="form-group row-1 justify-content-center">
+          <%= form.submit class: "btn btn-outline-light btn-lg" %>
+        </div>
+      <% end %>
+      <%= link_to "Back to articles", articles_path, class: "text-info" %>
     </div>
-  <% end %>
-
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
   </div>
-
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.textarea :description %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
