--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,12 +1,7 @@
 <% content_for :title, "Editing article" %>
+<div id='page-content'>
 
-<h1>Editing article</h1>
+  <h1 class="text-center mt-4">Editing article</h1>
 
-<%= render "form", article: @article %>
-
-<br>
-
-<div>
-  <%= link_to "Show this article", @article %> |
-  <%= link_to "Back to articles", articles_path %>
+  <%= render "form", article: @article %>
 </div>
