--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,10 +16,13 @@
             <div class="card-body">
               <h5 class="card-title"><%= link_to article.title, article_path(article), class: 'text-success' %></h5>
               <p class="card-text"><%= truncate(article.description, length: 100) %></p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <%= link_to 'View', article, class: "btn btn-outline-success" %>
+              <%= link_to 'Edit', article, class: "btn btn-outline-primary" %>
+              <%= link_to 'Delete', article, class: "btn btn-outline-danger", method: :delete %>
             </div>
             <div class="card-footer text-body-secondary">
-              2 days ago
+              <small>Created <%= time_ago_in_words(article.created_at) %> ago,
+              edited <%= time_ago_in_words(article.updated_at) %> ago</small>
             </div>
           </div>
         </div>
