--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,19 +1,8 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-10">
+      <%= render 'shared/errors' %>
       <%= form_with(model: article, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |form| %>
-        <% if article.errors.any? %>
-          <div style="color: red">
-            <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
-
-            <ul>
-              <% article.errors.each do |error| %>
-                <li><%= error.full_message %></li>
-              <% end %>
-            </ul>
-          </div>
-        <% end %>
-
         <div class="form-group row">
           <%= form.label :title, class: "col-2 col-form-lable text-light" %>
           <div class="col-10">
