--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,31 @@
-<h1>Showing article details</h1>
+<div id='page-content'>
+  <p style="color: green"><%= notice %></p>
 
-<p style="color: green"><%= notice %></p>
-<%= render @article %>
+  <h2 class="text-center mt-4"><%= @article.title %></h2>
 
-<div>
-  <%= link_to "Edit", edit_article_path(@article) %> |
-  <%= link_to "Delete", article_path(@article), method: :delete %> |
-  <%= link_to "Back", articles_path %>  
+  <div class='container'>
+      <div class="row justify-content-md-center">
+        <div class="col-8 mt-4">
+          <div class="card text-center shadow mb-5 bg-body-tertiary rounded">
+            <div class="card-header fst-italic">
+              by Rita Huang
+            </div>
+            <div class="card-body">
+              <div class="card-text text-left"><%= simple_format(@article.description) %></div>
+              <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-primary" %>
+              <%= link_to 'Delete', article_path(@article), class: "btn btn-outline-danger", method: :delete %>
+            </div>
+            <div class="card-footer text-body-secondary">
+              <small>Created <%= time_ago_in_words(@article.created_at) %> ago,
+              edited <%= time_ago_in_words(@article.updated_at) %> ago</small>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
 
-  <%= button_to "Delete this article", @article, method: :delete %>
+
+  <p>
+    <%= link_to "Create new article", new_article_path %>
+  </p>
 </div>
