clean up layout

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -21,7 +21,9 @@
           <%= form.submit class: "btn btn-outline-light btn-lg" %>
         </div>
       <% end %>
-      <%= link_to "Back to articles", articles_path, class: "text-info" %>
+      <div class="mb-3">
+        <%= link_to "Back to articles", articles_path, class: "text-info" %>
+      </div>
     </div>
   </div>
 </div>
