--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,7 @@
       <div class="col-8 mt-4">
         <div class="card text-center shadow mb-5 bg-body-tertiary rounded">
           <div class="card-header fst-italic">
-            by Rita Huang
+            by <%= article.user.username if article.user %>
           </div>
           <div class="card-body">
             <h5 class="card-title"><%= link_to article.title, article_path(article), class: 'text-success' %></h5>
