--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
       <div class="col-8 mt-4">
         <div class="card text-center shadow mb-5 bg-body-tertiary rounded">
           <div class="card-header fst-italic">
-            by Rita Huang
+            by <%= @article.user.username if @article.user %>
           </div>
           <div class="card-body">
             <div class="card-text text-left"><%= simple_format(@article.description) %></div>
